# task-manager

./: .gitignore  README.md
client-desktop/: .env.example  Cargo.toml
client-desktop/mate-applet/: Cargo.toml
client-desktop/mate-applet/src/: main.rs
client-desktop/src/: api_client.rs  config.rs  dbus_service.rs  login_dialog.rs  main.rs  models.rs  runtime.rs  session_store.rs  task_api.rs  task_form.rs  task_list.rs  task_metadata.rs  ui_utils.rs  user_admin.rs
client-mobile/: App.tsx  package.json  typedoc.json
client-mobile/__tests__/: App.test.tsx  metadata.test.ts  tasks.test.ts
client-mobile/android/: gradle.properties
client-mobile/android/app/: build.gradle
client-mobile/android/gradle/wrapper/: gradle-wrapper.properties
client-mobile/ios/ClientMobile/: Info.plist
client-mobile/ios/ClientMobile.xcodeproj/: project.pbxproj
client-mobile/scripts/: android-env.sh  run-android-dev.sh
client-mobile/src/: LoginScreen.tsx  TaskFormModal.tsx  UserAdminModal.tsx  api.ts  apiClient.ts  config.ts  metadata.ts  models.ts  sessionStore.ts  tasks.ts  theme.ts
client-web/: jsdoc.json  package.json
client-web/src/: App.css  App.jsx  Auth.css  LoginScreen.jsx  TaskApp.css  TaskApp.jsx  TaskFormModal.jsx  UserAdminModal.jsx  api.js  apiClient.js  config.js  index.css  main.jsx  metadata.js  models.js  sessionStore.js  theme.js
core-backend/: .env.example  Cargo.toml  init.sql
core-backend/.cargo/: config.toml
core-backend/migrations/: 001_add_users.sql  002_refresh_tokens.sql
core-backend/src/: app_config.rs  auth.rs  auth_user.rs  db_config.rs  jwt.rs  lib.rs  main.rs  password.rs  refresh_token.rs  tasks.rs  test_support.rs  users.rs
core-backend/tests/: api_integration.rs
