[package]
name = "client-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = "0.8.1"
libadwaita = "0.6.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glib = "0.19.9"
zbus = { version = "4.2", features = ["tokio"] }
