[package]
name = "client-desktop"
version = "0.1.0"
edition = "2021"
description = "Cliente de escritorio GTK 4 para el gestor de tareas con autenticación JWT"
readme = "../README.md"

[dependencies]
gtk4 = "0.8.1"
libadwaita = "0.6.0"
tokio = { version = "1", features = ["full", "sync"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glib = "0.19.9"
zbus = { version = "4.2", features = ["tokio"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
dotenvy = "0.15"
