[package]
name = "task-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "json", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
rand_core = { version = "0.6", features = ["std"] }
