[package]
name = "task-core"
version = "0.1.0"
edition = "2021"
description = "API REST del gestor de tareas con JWT, usuarios y tareas jerárquicas"
readme = "../README.md"

[lib]
name = "task_core"
path = "src/lib.rs"
doc = true

[[bin]]
name = "task-core"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "json", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
rand_core = { version = "0.6", features = ["std"] }
