[package]
name = "mate-applet"
version = "0.1.0"
edition = "2021"
description = "Applet MATE que abre o cierra la ventana del gestor de tareas por D-Bus"
readme = "../../README.md"

[dependencies]
gtk4 = "0.8.1"
glib = "0.19.9"
zbus = { version = "4.2", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
